--- a/web/ui/react-app/public/index.html
+++ b/web/ui/react-app/public/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8"/>
-    <!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
-    <meta
-            name="description"
-            content="Web site created using create-react-app"
-    />
-    <!--
+  <meta charset="utf-8" />
+  <!-- Primary Meta Tags -->
+  <title>Gobench — A distributed benchmark tool with Golang</title>
+  <meta name="title" content="Gobench — A distributed benchmark tool with Golang">
+  <meta name="description"
+    content="Supporting more than HTTP like MQTT, Websocket, graphQL. It can scale to support up to 1 million connections concurrently. It could support scriptable tool.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://github.com/gobench-io/gobench/">
+  <meta property="og:title" content="Gobench — A distributed benchmark tool with Golang">
+  <meta property="og:description"
+    content="Supporting more than HTTP like MQTT, Websocket, graphQL. It can scale to support up to 1 million connections concurrently. It could support scriptable tool.">
+  <meta property="og:image"
+    content="https://github.com/gobench-io/gobench/raw/master/docs/images/gobench_viewer.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://github.com/gobench-io/gobench/">
+  <meta property="twitter:title" content="Gobench — A distributed benchmark tool with Golang">
+  <meta property="twitter:description"
+    content="Supporting more than HTTP like MQTT, Websocket, graphQL. It can scale to support up to 1 million connections concurrently. It could support scriptable tool.">
+  <meta property="twitter:image"
+    content="https://github.com/gobench-io/gobench/raw/master/docs/images/gobench_viewer.png">
+  <!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -23,12 +43,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Gobench</title>
+  <title>Gobench</title>
 </head>
+
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
-<!--
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
 
@@ -39,4 +60,5 @@
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
 </body>
+
 </html>
