--- a/web/ui/gobench-ui/public/index.html
+++ b/web/ui/gobench-ui/public/index.html
@@ -31,7 +31,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#ffffff" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
